setup tests with tape

--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "Timeline",
+  "description": "Timeline is a better resume.",
+  "license": "MIT",
+  "repository": "nsarno/timeline",
   "version": "0.0.0",
+  "author": {
+    "name": "Arnaud Mesureur",
+    "email": "arnaud.mesureur@gmail.com",
+    "url": "https://github.com/nsarno"
+  },
   "browserify": {
     "transform": [
       "babelify"
@@ -8,6 +16,7 @@
   },
   "scripts": {
     "start": "npm run watch & npm run serve",
+    "test": "bin/test",
     "build": "npm run build:js && npm run build:css && npm run build:assets",
     "watch": "npm run watch:js & npm run watch:css & npm run watch:assets",
     "build:js": "browserify -d --extension=.jsx --extension=.js -e app/scripts/initialize.jsx | exorcist public/bundle.map.js > public/bundle.js",
@@ -33,6 +42,7 @@
     "browserify": "^11.0.0",
     "exorcist": "^0.4.0",
     "nodemon": "^1.3.8",
+    "tape": "^4.0.1",
     "watchify": "^3.3.0"
   }
 }
