--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "serve": "browser-sync start --no-notify --server 'public' --files 'public/*'"
   },
   "dependencies": {
+    "classnames": "^2.1.3",
     "flux": "^2.0.3",
+    "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
     "node-fetch": "^1.3.2",
     "react": "^0.13.3",
