--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "flux": "^2.0.3",
     "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
+    "lodash": "^3.10.0",
     "node-fetch": "^1.3.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
